it is now possible to update booths.
