# backend/Application/Booths/Commands/UpdateBooth/UpdateBoothRequest.cs
@@ -1,0 +1,15 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace Application.Booths.Commands.UpdateBooth
+{
+    public class UpdateBoothRequest
+    {
+        public string Id { get; set; }
+        public string BoothName { get; set; }
+        public string BoothDescription { get; set; }
+    }
+}
